--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,11 +328,10 @@ flex-basis: fill;
     margin: 35px;
     /* border: 12px solid, var(--tertiary-color);
     border-radius: 15px; */
-
   }
   
   .step-img img {
-    max-width: 75%;
+    max-width: 100%;
   }
   
   .step-text {
@@ -484,6 +483,7 @@ flex-basis: fill;
   
   .flex-row {
     display: flex;
+    margin-top: 69px;
   }
   
   /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@@ -559,6 +559,10 @@ flex-basis: fill;
     .contact-info iframe{
       flex: 1 100%;
     }
+
+    .flex-row {
+      margin-top: 0%;
+    }
   }
   
   /* MEDIA QUERY FOR TABLETS AND SMALLER */
@@ -580,10 +584,8 @@ flex-basis: fill;
   
     .step-img {
       flex: 0 32%;
-      margin-right: 0;
       margin-top: 15px;
       margin-bottom: 15px;
-      
     }
   
     .step-text {
