--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,10 +118,23 @@
   .hero h2 {
     text-align: left;
   }
+
+  .banner-img {
+    flex: 1 auto;
+    margin: 35px;
+    margin-top: 22px;
+  }
   
+  .banner-img img {
+    max-width: 100%;
+    border: 5px solid var(--secondary-color);
+    border-radius: 20px;
+  }
+
+/* shade styling */
   .shade {
     position: absolute;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.3);
     height: 100%;
     width: 100%;
     top: 0;
@@ -143,6 +156,10 @@
     color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
+
+  .hero-text p{
+    text-align: justify;
+  }
   
   .hero-banner {
     background-color: rgba(222, 208, 242,0.8);
@@ -154,13 +171,17 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
-  
+
   .hero-banner h3 {
     font-size: 24px;
+    font-style: italic;
+    font-weight: bold;
     margin: 0;
   }
   .hero-banner p {
-    margin: 5px 0 15px 0;
+    margin: 5px 0 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
   }
    
   .checkbox-wrapper input, .radio-wrapper input {
@@ -225,7 +246,6 @@
   /* HERO STYLES END */
   
   
-  
   /* FOOTER STYLES START */
   footer {
     background: var(--primary-color);
@@ -235,6 +255,7 @@
     flex-wrap: wrap;
     width: 100%;
   }
+  
   
   footer h2 {
     color: var(--secondary-color);
@@ -281,50 +302,61 @@
   
   
   /* WHAT YOU DO STYLES START */
-  .steps { 
+  .Projects {
     background: var(--primary-color);
   }
+
+  .container{
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .Thumbnail{
+    float: left;
+    width: 17vw;
+    overflow: hidden;
+    margin: 0 10px 0 0;
+    -webkit-transition: width .2s ease-in;
+    -moz-transition: width .2s ease-in;
+    -o-transition: width .2s ease-in;
+    border: 5px solid var(--secondary-color);
+    animation-duration: 0.5s;
+    border-radius: 15px;
+  }
+
+ 
+.Thumbnail:hover {
+    width: 20vw;
+}
   
-  .step {
+  .Thumb {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
-    justify-content: space-between;
+    align-content: space-between;
   }
   
-  .step:last-child {
-    border-bottom: none;
-  }
-  
-  .step h3 {
+  .Thumb h3 {
     color: var(--secondary-color);
-    font-size: 46px;
+    font-size: 35px;
     flex: 1 30%;
+    text-align: center;
+    padding-right: 0px;
+    border-bottom: 5px solid var(--secondary-color);
+    margin-bottom: 15px;
   }
   
   .step-info {
     flex: 2 70%;
     display: flex;
-    flex-wrap: auto;
+    flex-wrap: wrap;
     align-items: center;
   }
-  
-  .step-img {
-    flex: 1 auto;
-    margin: 35px;
-    
-    /* border: 12px solid, var(--tertiary-color);
-    border-radius: 15px; */
-  }
-  
-  .step-img img {
-    max-width: 100%;
-    border: 5px solid var(--secondary-color);
-    border-radius: 20px;
-  }
+
   
   .step-text {
     flex: 12;
@@ -340,50 +372,6 @@
     line-height: 1.5;
     color: var(--secondary-color);
   }
-  /* WHAT YOU DO STYLES END */
-  
-  /* MEET THE TRAINERS START */
-  .trainers {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
-  .trainer {
-    margin: 20px;
-    flex: 1;
-    background: var(--secondary-color);
-    color: var(--primary-color);
-  }
-  
-  .trainer-img {
-    width: 100%;
-    border: 12px solid, var(--tertiary-color);
-    border-radius: 15px;
-
-  }
-  
-  .trainer-bio {
-    padding: 25px;
-    line-height: 1.3;
-  }
-  
-  .trainer-bio h3 {
-    font-size: 28px;
-  }
-  
-  .trainer-bio h4 {
-    font-weight: lighter;
-    font-size: 22px;
-    margin-bottom: 15px;
-  }
-  
-  .trainer-bio p {
-    font-size: 17px;
-  }
-  /* TRAINER STYLES END */
   
   /* REACH OUT STYLES START */
   .contact {
@@ -476,8 +464,24 @@
   .flex-row {
     display: flex;
     margin-top: 50px;
+    flex-wrap: wrap;
   }
-  
+
+  @media screen and (max-width: 1476px){
+    .container{
+    flex-direction: column;
+    margin-left: 32px;
+    }
+
+    .container h3 {
+      font-size: 46px;
+    }
+
+    .Thumbnail{
+      width: 100%;
+    }
+
+  }
   /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
   @media screen and (max-width: 1004px) {
     header {
